other than project stuff/simple_spring_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-demo
  namespace: spring-app
  labels:
    app: spring-boot-demo
spec:
  selector:
    matchLabels:
      app: spring-boot-demo
  template:
    metadata:
      labels:
        app: spring-boot-demo
      annotations:                  
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"   
        prometheus.io/path: "/actuator/prometheus" 
    spec:
      containers:
        - name: spring-app
          image: harbor.devbsfintech23.com/test-discovery/simple-spring:test
          ports:
            - containerPort: 8080
          volumeMounts: 
            - mountPath: /data 
              name: spring-boot-demo-storage  
      volumes:  
        - name: spring-boot-demo-storage
          persistentVolumeClaim:
            claimName: spring-boot-demo-pvc
      imagePullSecrets:
        - name: fintech-harbor

---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-demo
  namespace: spring-app 
  labels:
    app: spring-boot-demo
  annotations:                    
    prometheus.io/discover: "true" 
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8080"   
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: spring-boot-demo
