other than project stuff/argo_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: argo-server.fintech23.xyz
    http:
      paths:
      - backend:
          service:
            name: argo-server
            port:
              number: 2746
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argo-server.fintech23.xyz
    secretName: fintech23xyz-ingress-tls
